# fshare

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build.sh
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-07-10-fshare-auth.md  2026-07-10-fshare-limit.md  2026-07-10-fshare-mdns.md  2026-07-10-fshare-polish-release.md  2026-07-10-fshare-tls.md  2026-07-10-fshare-upload.md  2026-07-10-fshare-v1.md  2026-07-11-fshare-banner-qr-layout.md  2026-07-11-fshare-config-secure-mdns.md  2026-07-11-fshare-tui-live-settings.md
docs/superpowers/specs/: 2026-07-10-fshare-auth-design.md  2026-07-10-fshare-limit-design.md  2026-07-10-fshare-mdns-design.md  2026-07-10-fshare-polish-release-design.md  2026-07-10-fshare-tls-design.md  2026-07-10-fshare-upload-design.md  2026-07-10-fshare-v1-design.md  2026-07-11-fshare-banner-qr-layout-design.md  2026-07-11-fshare-config-secure-mdns-design.md  2026-07-11-fshare-tui-live-settings-design.md  2026-07-13-mobile-listing-redesign-design.md
packaging/aur/: README.md
packaging/aur/fshare/: PKGBUILD
packaging/aur/fshare-bin/: PKGBUILD
src/: 404.html  auth.rs  banner.rs  cli.rs  config.rs  expiry.rs  fsutil.rs  instance.rs  lib.rs  listing.html  listing.rs  live.rs  log.rs  logo.b64  main.rs  mdns.rs  net.rs  server.rs  stats.rs  tls.rs  tui.rs  upload.rs  zip.rs
src/tui/: draw.rs
tests/: deleted_cwd.rs  http.rs
