[package]
name = "fshare"
version = "0.1.0"
edition = "2021"
description = "Modern LAN file sharing over HTTP — a better `python3 -m http.server`"
license = "MIT"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
clap = { version = "4", features = ["derive"] }
qrcode = { version = "0.14", default-features = false }
if-addrs = "0.13"
async_zip = { version = "0.0.17", features = ["tokio", "deflate"] }
walkdir = "2"
percent-encoding = "2"
pin-project-lite = "0.2"
tokio-util = { version = "0.7", features = ["io", "compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4"
dns-lookup = "2"
rand = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
http-body = "1"
bytes = "1"
futures = "0.3"
html-escape = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
tempfile = "3"
zip = "2"

[profile.release]
lto = true
strip = true
codegen-units = 1
